# stonedb

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml
.beads/: metadata.json
.github/workflows/: ci.yml
crates/concurrent-test-framework/: Cargo.toml
crates/concurrent-test-framework/src/: lib.rs
crates/stonedb-core/: Cargo.toml
crates/stonedb-core/benches/: bench.rs
crates/stonedb-core/src/: entry.rs  error.rs  iterator.rs  key.rs  lib.rs  memtable.rs  skiplist.rs  timeline.rs
crates/stonedb-core/src/skiplist/: arena.rs  key.rs  mod.rs
crates/stonedb-core/tests/: skiplist_basic_test.rs  skiplist_concurrent_test.rs  skiplist_debug_test.rs
docs/: architecture.md  code-quality-findings.md  timeline.md
docs/components/: 01-wal.md  02-memtable.md  03-sstable.md  04-levels.md  05-compaction.md  06-manifest.md  07-iterator.md  08-grpc-api.md
docs/design/: concurrent-test-framework.md
docs/findings/: 2026-04-04_agatedb-skiplist-study.md
docs/lessons/: iterator-benchmark-lesson.md  skiplist-implementation-guide.md  skiplist-redis-agatedb-rocksdb.md
docs/postmortem/: skiplist-bugs.md
docs/postmortems/: skiplist-cas-retry-bug.md  skiplist-test-gap.md
docs/tasks/: skiplist-improvements.md
