[package]
name = "stonedb-core"
version.workspace = true
edition.workspace = true

[features]
default = []
timeline = ["tokio/sync", "serde/derive", "serde_json"]

# Core data structures only - no I/O dependencies
[dependencies]
getrandom = "0.2"
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }

[dev-dependencies]
